// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ResponseElement given schema keyword in form of object with $ref property should refract to semantic ApiDOM tree 1`] = `
(ResponseElement
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ResponseElement should refract to semantic ApiDOM tree 1`] = `
(ResponseElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (HeadersElement))
  (MemberElement
    (StringElement)
    (ExampleElement)))
`;
